--- a/index.html
+++ b/index.html
@@ -13,10 +13,23 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+    <style></style>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            backgroundImage: {
+              "hero-bg":
+                "url('./images/banner1.png'), linear-gradient(180deg, #f948b2 0%, #8758f1 100%)",
+            },
+          },
+        },
+      };
+    </script>
   </head>
   <body>
     <nav
-      class="navbar justify-evenly mt-12 mb-7 md:bg-[#F85559;] md:rounded-full md:max-w-3xl mx-auto md:my-10"
+      class="navbar justify-center md:justify-evenly mt-12 mb-4 md:bg-[#F85559;] md:rounded-full md:max-w-3xl md:mx-auto md:my-4"
     >
       <div class="navbar-start hidden md:flex">
         <ul class="menu menu-horizontal px-1">
@@ -47,7 +60,7 @@
         </button>
 
         <!-- dropdown -->
-        <div class="dropdown">
+        <div class="dropdown dropdown-left">
           <label tabindex="0" class="btn btn-ghost md:hidden">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -65,7 +78,32 @@
           </label>
           <ul
             tabindex="0"
-            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-[#F85559;] rounded-box w-52"
+            class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52"
+          >
+            <li><a>Item 1</a></li>
+            <li><a>Item 2</a></li>
+          </ul>
+        </div>
+        <!-- ager ta -->
+        <!-- <div class="dropdown">
+          <label tabindex="0" class="btn btn-ghost md:hidden">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              class="inline-block w-5 h-5 stroke-current"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M4 6h16M4 12h16M4 18h16"
+              ></path>
+            </svg>
+          </label>
+          <ul
+            tabindex="0"
+            class="menu menu-sm mt-3 z-[1] p-2 shadow bg-[#F85559;] rounded-box w-52 md:hidden"
           >
             <li><a>Item 1</a></li>
             <li>
@@ -73,8 +111,148 @@
             </li>
             <li><a>Item 3</a></li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </nav>
+
+    <!-- hero-bg -->
+    <div class="bg-hero-bg min-h-full"></div>
+
+    <!-- banner section -->
+    <section>
+      <div class="relative mx-5 md:max-w-3xl md:mx-auto">
+        <div class="carousel w-full rounded-md">
+          <div id="slide1" class="carousel-item relative w-full">
+            <div class="hero min-h-[calc(100vh-100px)] bg-hero-bg p-8">
+              <!-- style="background: url(./images/banner1.png)" -->
+              <div class="bg-opacity-60"></div>
+              <div class="hero-content text-center text-neutral-content">
+                <div class="max-w-md">
+                  <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+                  <p class="mb-5">
+                    Provident cupiditate voluptatem et in. Quaerat fugiat ut
+                    assumenda excepturi exercitationem quasi. In deleniti eaque
+                    aut repudiandae et a id nisi.
+                  </p>
+                  <button class="btn btn-primary">Get Started</button>
+                </div>
+              </div>
+            </div>
+            <!-- <img src="./images/banner1.png" class="w-full" /> -->
+            <div
+              class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+            >
+              <a href="#slide4" class="btn btn-circle">❮</a>
+              <a href="#slide2" class="btn btn-circle">❯</a>
+            </div>
+          </div>
+        </div>
+        <div
+          class="max-w-5xl p-4 bg-white hidden md:block absolute -bottom-24 left-20 right-20"
+        >
+          <div class="flex gap-8 text-center">
+            <div>
+              <img src="images/fruit1.png" alt="" />
+              <p class="my-2">Hello there</p>
+            </div>
+            <div>
+              <img src="images/fruit1.png" alt="" />
+              <p class="my-2">Hello there</p>
+            </div>
+            <div>
+              <img src="images/fruit1.png" alt="" />
+              <p class="my-2">Hello there</p>
+            </div>
+            <div>
+              <img src="images/fruit1.png" alt="" />
+              <p class="my-2">Hello there</p>
+            </div>
+            <div>
+              <img src="images/fruit1.png" alt="" />
+              <p class="my-2">Hello there</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
+
+<!-- <div id="slide2" class="carousel-item relative w-full">
+  <div
+    class="hero min-h-screen"
+    style="background-image: url(./images/banner2.png)"
+    >
+    <div class="bg-opacity-60"></div>
+    <div class="hero-content text-center text-neutral-content">
+      <div class="max-w-md">
+        <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+        <p class="mb-5">
+          Provident cupiditate voluptatem et in. Quaerat fugiat ut
+          assumenda excepturi exercitationem quasi. In deleniti eaque
+          aut repudiandae et a id nisi.
+        </p>
+        <button class="btn btn-primary">Get Started</button>
+      </div>
+    </div>
+  </div>
+  <img src="/images/banner2.png" class="w-full" />
+  <div
+    class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+  >
+    <a href="#slide1" class="btn btn-circle">❮</a>
+    <a href="#slide3" class="btn btn-circle">❯</a>
+  </div>
+</div>
+<div id="slide3" class="carousel-item relative w-full">
+  <div
+    class="hero min-h-screen"
+    style="background-image: url(./images/banner3.png)"
+  >
+    <div class="bg-opacity-60"></div>
+    <div class="hero-content text-center text-neutral-content">
+      <div class="max-w-md">
+        <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+        <p class="mb-5">
+          Provident cupiditate voluptatem et in. Quaerat fugiat ut
+          assumenda excepturi exercitationem quasi. In deleniti eaque
+          aut repudiandae et a id nisi.
+        </p>
+        <button class="btn btn-primary">Get Started</button>
+      </div>
+    </div>
+  </div>
+  <img src="/images/banner3.png" class="w-full" />
+  <div
+    class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+  >
+    <a href="#slide2" class="btn btn-circle">❮</a>
+    <a href="#slide4" class="btn btn-circle">❯</a>
+  </div>
+</div>
+<div id="slide4" class="carousel-item relative w-full">
+  <div
+    class="hero min-h-screen"
+    style="background-image: url(./images/banner4.png)"
+  >
+    <div class="bg-opacity-60"></div>
+    <div class="hero-content text-center text-neutral-content">
+      <div class="max-w-md">
+        <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+        <p class="mb-5">
+          Provident cupiditate voluptatem et in. Quaerat fugiat ut
+          assumenda excepturi exercitationem quasi. In deleniti eaque
+          aut repudiandae et a id nisi.
+        </p>
+        <button class="btn btn-primary">Get Started</button>
+      </div>
+    </div>
+  </div>
+  <img src="/images/banner4.png" class="w-full" />
+  <div
+    class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+  >
+    <a href="#slide3" class="btn btn-circle">❮</a>
+    <a href="#slide1" class="btn btn-circle">❯</a>
+  </div>
+</div> -->
