--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <a class="btn btn-ghost normal-case text-xl">daisyUI</a>
       </div>
       <div class="navbar-end">
+        <!-- <input type="text" class="hidden md:inline-block">
         <button class="btn btn-ghost btn-circle hidden md:inline-block">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -59,7 +60,33 @@
               d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
             />
           </svg>
-        </button>
+        </button> -->
+        <div
+          class="hidden md:flex rounded-full w-full max-w-xs bg-white items-center"
+        >
+          <input
+            type="text"
+            placeholder="Type here"
+            class="flex-1 rounded-full p-3 outline-none"
+          />
+
+          <button class="btn btn-ghost btn-circle hidden md:inline-block">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-5 w-5"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+              />
+            </svg>
+          </button>
+        </div>
 
         <!-- dropdown -->
         <div class="dropdown dropdown-left">
