navbar input style added

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             class="flex-1 rounded-full p-3 outline-none"
           />
 
-          <button class="btn btn-ghost btn-circle hidden md:inline-block">
+          <button class="btn-circle bg-white flex justify-center items-center">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-5 w-5"
