deal of the day responcive

--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
       <!-- Deal of the day -->
       <section>
         <div class="mx-5 md:max-w-3xl md:mx-auto">
-          <div class="flex">
-            <div class="">
+          <div class="flex flex-col md:flex-row items-center">
+            <div class="text-center md:text-left">
               <div>
                 <h1 class="text-5xl font-bold">Box Office News!</h1>
                 <p class="py-6">
@@ -287,7 +287,7 @@
               </div>
             </div>
           </div>
-          <div class="grid grid-cols-4">
+          <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-4">
             <!-- card 1 -->
             <div class="card bg-base-100 shadow-xl">
               <figure class="px-10 pt-10">
