--- a/index.html
+++ b/index.html
@@ -539,6 +539,132 @@
           <!-- button add korte hobe -->
         </div>
       </section>
+      <!-- team -->
+      <section>
+        <div class="mx-5 md:max-w-3xl md:mx-auto">
+          <div
+            class="hero min-h-screen rounded-lg"
+            style="background-image: url('./images/banner1.png')"
+          >
+            <!-- hero -->
+            <!-- grid place-content-center bg-cover bg-center w-full -->
+            <!-- <div class="hero-overlay bg-opacity-60 rounded-2xl"></div> -->
+            <div
+              class="rounded-lg bg-gradient-to-b from-[#181818] to-[#a7a1a1] w-full h-full opacity-60 -z-0"
+            ></div>
+            <!--  -->
+            <!-- grid -->
+            <div
+              class="grid grid-cols-2 justify-self-center self-center text-center text-neutral-content z-30 p-4"
+            >
+              <div class="max-w-md col-span-full justify-self-center p-4">
+                <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+                <p class="mb-5">
+                  Provident cupiditate voluptatem et in. Quaerat fugiat ut
+                  assumenda excepturi exercitationem quasi. In deleniti eaque
+                  aut repudiandae et a id nisi.
+                </p>
+              </div>
+
+              <div
+                class="col-span-full grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4"
+              >
+                <div class="card card-compact bg-base-100 shadow-xl">
+                  <div class="avatar">
+                    <div class="w-24 rounded-full">
+                      <img src="/images/member1.png" />
+                    </div>
+                  </div>
+                  <div class="card-body">
+                    <h2 class="card-title">Shoes!</h2>
+                    <p>If a dog chews shoes whose shoes does he choose?</p>
+                  </div>
+                </div>
+                <div class="card card-compact bg-base-100 shadow-xl">
+                  <div class="avatar">
+                    <div class="w-24 rounded-full">
+                      <img src="/images/member1.png" />
+                    </div>
+                  </div>
+                  <div class="card-body">
+                    <h2 class="card-title">Shoes!</h2>
+                    <p>If a dog chews shoes whose shoes does he choose?</p>
+                  </div>
+                </div>
+                <div class="card card-compact bg-base-100 shadow-xl">
+                  <div class="avatar">
+                    <div class="w-24 rounded-full">
+                      <img src="/images/member1.png" />
+                    </div>
+                  </div>
+                  <div class="card-body">
+                    <h2 class="card-title">Shoes!</h2>
+                    <p>If a dog chews shoes whose shoes does he choose?</p>
+                  </div>
+                </div>
+                <div class="card card-compact bg-base-100 shadow-xl">
+                  <div class="avatar">
+                    <div class="w-24 rounded-full">
+                      <img src="/images/member1.png" />
+                    </div>
+                  </div>
+                  <div class="card-body">
+                    <h2 class="card-title">Shoes!</h2>
+                    <p>If a dog chews shoes whose shoes does he choose?</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+              <div class="card card-compact bg-base-100 shadow-xl">
+                <div class="avatar">
+                  <div class="w-24 rounded-full">
+                    <img src="/images/member1.png" />
+                  </div>
+                </div>
+                <div class="card-body">
+                  <h2 class="card-title">Shoes!</h2>
+                  <p>If a dog chews shoes whose shoes does he choose?</p>
+                </div>
+              </div>
+              <div class="card card-compact bg-base-100 shadow-xl">
+                <div class="avatar">
+                  <div class="w-24 rounded-full">
+                    <img src="/images/member1.png" />
+                  </div>
+                </div>
+                <div class="card-body">
+                  <h2 class="card-title">Shoes!</h2>
+                  <p>If a dog chews shoes whose shoes does he choose?</p>
+                </div>
+              </div>
+              <div class="card card-compact bg-base-100 shadow-xl">
+                <div class="avatar">
+                  <div class="w-24 rounded-full">
+                    <img src="/images/member1.png" />
+                  </div>
+                </div>
+                <div class="card-body">
+                  <h2 class="card-title">Shoes!</h2>
+                  <p>If a dog chews shoes whose shoes does he choose?</p>
+                </div>
+              </div>
+              <div class="card card-compact bg-base-100 shadow-xl">
+                <div class="avatar">
+                  <div class="w-24 rounded-full">
+                    <img src="/images/member1.png" />
+                  </div>
+                </div>
+                <div class="card-body">
+                  <h2 class="card-title">Shoes!</h2>
+                  <p>If a dog chews shoes whose shoes does he choose?</p>
+                </div>
+              </div>
+            </div> -->
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
