--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             <!-- card 1 -->
             <div class="card bg-base-100 shadow-xl">
               <figure class="px-10 pt-10">
-                <img src="/images/fruit6.png" alt="Shoes" class="rounded-xl" />
+                <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
               </figure>
               <div class="card-body items-center text-center">
                 <h2 class="card-title">Shoes!</h2>
@@ -353,7 +353,7 @@
             <!-- card 2 -->
             <div class="card bg-base-100 shadow-xl">
               <figure class="px-10 pt-10">
-                <img src="/images/fruit6.png" alt="Shoes" class="rounded-xl" />
+                <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
               </figure>
               <div class="card-body items-center text-center">
                 <h2 class="card-title">Shoes!</h2>
@@ -414,7 +414,7 @@
             <!-- card 3 -->
             <div class="card bg-base-100 shadow-xl">
               <figure class="px-10 pt-10">
-                <img src="/images/fruit6.png" alt="Shoes" class="rounded-xl" />
+                <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
               </figure>
               <div class="card-body items-center text-center">
                 <h2 class="card-title">Shoes!</h2>
@@ -476,7 +476,7 @@
             <!-- card 4 -->
             <div class="card bg-base-100 shadow-xl">
               <figure class="px-10 pt-10">
-                <img src="/images/fruit6.png" alt="Shoes" class="rounded-xl" />
+                <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
               </figure>
               <div class="card-body items-center text-center">
                 <h2 class="card-title">Shoes!</h2>
@@ -572,7 +572,7 @@
                 <div class="card card-compact bg-base-100 shadow-xl">
                   <div class="avatar">
                     <div class="w-24 rounded-full">
-                      <img src="/images/member1.png" />
+                      <img src="./images/member1.png" />
                     </div>
                   </div>
                   <div class="card-body">
@@ -583,7 +583,7 @@
                 <div class="card card-compact bg-base-100 shadow-xl">
                   <div class="avatar">
                     <div class="w-24 rounded-full">
-                      <img src="/images/member1.png" />
+                      <img src="./images/member1.png" />
                     </div>
                   </div>
                   <div class="card-body">
@@ -594,7 +594,7 @@
                 <div class="card card-compact bg-base-100 shadow-xl">
                   <div class="avatar">
                     <div class="w-24 rounded-full">
-                      <img src="/images/member1.png" />
+                      <img src="./images/member1.png" />
                     </div>
                   </div>
                   <div class="card-body">
@@ -605,7 +605,7 @@
                 <div class="card card-compact bg-base-100 shadow-xl">
                   <div class="avatar">
                     <div class="w-24 rounded-full">
-                      <img src="/images/member1.png" />
+                      <img src="./images/member1.png" />
                     </div>
                   </div>
                   <div class="card-body">
