--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         },
       };
     </script>
+    <script
+      src="https://kit.fontawesome.com/65ce8bc6c1.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -48,19 +52,19 @@
           <a class="btn btn-ghost normal-case text-xl">daisyUI</a>
         </div>
         <div class="navbar-end">
-          <div
-            class="hidden md:flex rounded-full w-full max-w-xs bg-white items-center"
+          <form
+            class="hidden relative md:flex rounded-full w-full max-w-xs bg-white items-center"
           >
             <input
               type="text"
               placeholder="Type here"
-              class="flex-1 rounded-full p-3 outline-none"
+              class="block w-full h-full rounded-full p-3 outline-none text-lg"
             />
 
             <button
-              class="btn-circle bg-white flex justify-center items-center"
+              class="w-[50px] h-full absolute top-0 right-0 bg-white fa fa-search rounded-full"
             >
-              <svg
+              <!-- <svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="h-5 w-5"
                 fill="none"
@@ -73,9 +77,9 @@
                   stroke-width="2"
                   d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                 />
-              </svg>
+              </svg> -->
             </button>
-          </div>
+          </form>
 
           <!-- dropdown -->
           <div class="dropdown dropdown-left">
@@ -614,53 +618,111 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+      <!-- why choose us -->
+      <section>
+        <div class="mx-5 md:max-w-3xl md:mx-auto">
+          <div class="max-w-xl p-4 text-center mx-auto">
+            <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+            <p class="mb-5">
+              Contrary to popular belief, is not simply random text. It has
+              roots in a piece of classical Latin literature from 45 BC, making
+              it over 2000 years old.
+            </p>
+          </div>
 
-            <!-- <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
-              <div class="card card-compact bg-base-100 shadow-xl">
-                <div class="avatar">
-                  <div class="w-24 rounded-full">
-                    <img src="/images/member1.png" />
-                  </div>
-                </div>
-                <div class="card-body">
-                  <h2 class="card-title">Shoes!</h2>
-                  <p>If a dog chews shoes whose shoes does he choose?</p>
-                </div>
-              </div>
-              <div class="card card-compact bg-base-100 shadow-xl">
-                <div class="avatar">
-                  <div class="w-24 rounded-full">
-                    <img src="/images/member1.png" />
-                  </div>
-                </div>
-                <div class="card-body">
-                  <h2 class="card-title">Shoes!</h2>
-                  <p>If a dog chews shoes whose shoes does he choose?</p>
+          <div class="flex flex-col md:flex-row gap-4">
+            <div class="flex flex-col items-center gap-2">
+              <div
+                class="flex flex-col md:flex-row items-center gap-2 text-center md:text-left"
+              >
+                <img class="max-w-full" src="./images/Group 46.png" alt="" />
+                <div>
+                  <h3>Dedicated Team</h3>
+                  <span class="inline-block border w-20"></span>
+                  <p>
+                    Professional employees are there for you to pick the most
+                    amazing and fresh fruits.
+                  </p>
                 </div>
               </div>
-              <div class="card card-compact bg-base-100 shadow-xl">
-                <div class="avatar">
-                  <div class="w-24 rounded-full">
-                    <img src="/images/member1.png" />
-                  </div>
-                </div>
-                <div class="card-body">
-                  <h2 class="card-title">Shoes!</h2>
-                  <p>If a dog chews shoes whose shoes does he choose?</p>
-                </div>
-              </div>
-              <div class="card card-compact bg-base-100 shadow-xl">
-                <div class="avatar">
-                  <div class="w-24 rounded-full">
-                    <img src="/images/member1.png" />
-                  </div>
-                </div>
-                <div class="card-body">
-                  <h2 class="card-title">Shoes!</h2>
-                  <p>If a dog chews shoes whose shoes does he choose?</p>
+              <div
+                class="flex flex-col md:flex-row items-center gap-2 text-center md:text-left"
+              >
+                <img class="max-w-full" src="./images/Group 46.png" alt="" />
+                <div>
+                  <h3>Dedicated Team</h3>
+                  <span class="inline-block border w-20"></span>
+                  <p>
+                    Professional employees are there for you to pick the most
+                    amazing and fresh fruits.
+                  </p>
                 </div>
               </div>
-            </div> -->
+              <div
+                class="flex flex-col md:flex-row items-center gap-2 text-center md:text-left"
+              >
+                <img class="max-w-full" src="./images/Group 46.png" alt="" />
+                <div>
+                  <h3>Dedicated Team</h3>
+                  <span class="inline-block border w-20"></span>
+                  <p>
+                    Professional employees are there for you to pick the most
+                    amazing and fresh fruits.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="-order-1 md:order-none">
+              <img
+                src="./images/whychoose1.png"
+                alt=""
+                class="max-w-full min-h-full object-cover"
+              />
+            </div>
+            <div class="flex flex-col items-center gap-2">
+              <div
+                class="flex flex-col md:flex-row-reverse items-center gap-2 text-center md:text-right"
+              >
+                <img class="max-w-full" src="./images/Group 46.png" alt="" />
+                <div>
+                  <h3>Dedicated Team</h3>
+                  <span class="inline-block border w-20"></span>
+                  <p>
+                    Professional employees are there for you to pick the most
+                    amazing and fresh fruits.
+                  </p>
+                </div>
+              </div>
+              <div
+                class="flex flex-col md:flex-row-reverse items-center gap-2 text-center md:text-right"
+              >
+                <img class="max-w-full" src="./images/Group 46.png" alt="" />
+                <div>
+                  <h3>Dedicated Team</h3>
+                  <span class="inline-block border w-20"></span>
+                  <p>
+                    Professional employees are there for you to pick the most
+                    amazing and fresh fruits.
+                  </p>
+                </div>
+              </div>
+              <div
+                class="flex flex-col md:flex-row-reverse items-center gap-2 text-center md:text-right"
+              >
+                <img class="max-w-full" src="./images/Group 46.png" alt="" />
+                <div>
+                  <h3>Dedicated Team</h3>
+                  <span class="inline-block border w-20"></span>
+                  <p>
+                    Professional employees are there for you to pick the most
+                    amazing and fresh fruits.
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
