--- a/index.html
+++ b/index.html
@@ -39,21 +39,28 @@
   <body>
     <header>
       <nav
-        class="navbar justify-center md:justify-evenly mt-12 mb-4 md:bg-[#F85559;] md:rounded-full md:max-w-3xl md:mx-auto md:my-4"
+        class="navbar justify-around md:flex-row-reverse lg:flex-row md:justify-between md:px-10 mt-4 mb-4 md:bg-[#F85559;] md:rounded-full md:max-w-4xl md:mx-auto md:my-4 lg:max-w-5xl"
       >
         <div class="navbar-start hidden md:flex">
-          <ul class="menu menu-horizontal px-1">
-            <li><a>Item 1</a></li>
-            <li><a>Item 2</a></li>
-            <li><a>Item 3</a></li>
+          <ul class="menu menu-horizontal px-1 text-base">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Shop</a></li>
+            <li><a href="#">All Fruits</a></li>
           </ul>
         </div>
         <div class="navbar-center">
-          <a class="btn btn-ghost normal-case text-xl">daisyUI</a>
+          <!-- <a class="btn btn-ghost normal-case text-xl">daisyUI</a> -->
+          <div class="flex items-center">
+            <img src="./images/logo.png" alt="" />
+            <p class="btn btn-ghost normal-case text-xl">
+              <a href="#">Fruit Burst</a>
+            </p>
+          </div>
         </div>
-        <div class="navbar-end">
+        <div class="navbar-end md:hidden lg:flex">
           <form
-            class="hidden relative md:flex rounded-full w-full max-w-xs bg-white items-center"
+            class="hidden relative lg:flex rounded-full w-full max-w-xs bg-white items-center"
           >
             <input
               type="text"
@@ -82,8 +89,8 @@
           </form>
 
           <!-- dropdown -->
-          <div class="dropdown dropdown-left">
-            <label tabindex="0" class="btn btn-ghost md:hidden">
+          <div class="dropdown dropdown-left md:hidden">
+            <label tabindex="0" class="btn btn-ghost">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
