deal section responsive added

--- a/index.html
+++ b/index.html
@@ -70,22 +70,7 @@
 
             <button
               class="w-[50px] h-full absolute top-0 right-0 bg-white fa fa-search rounded-full"
-            >
-              <!-- <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-5 w-5"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
-                />
-              </svg> -->
-            </button>
+            ></button>
           </form>
 
           <!-- dropdown -->
@@ -109,8 +94,10 @@
               tabindex="0"
               class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52"
             >
-              <li><a>Item 1</a></li>
-              <li><a>Item 2</a></li>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Shop</a></li>
+              <li><a href="#">All Fruits</a></li>
             </ul>
           </div>
         </div>
@@ -118,7 +105,7 @@
 
       <!-- banner section -->
       <section>
-        <div class="relative mx-5 md:max-w-3xl md:mx-auto mb-24">
+        <div class="relative mx-5 mb-36 md:max-w-4xl lg:max-w-5xl md:mx-auto">
           <div class="carousel w-full rounded-md">
             <div id="slide1" class="carousel-item relative w-full">
               <div class="hero min-h-[calc(100vh-100px)] bg-banner1">
@@ -128,14 +115,12 @@
                 <div class="hero-content text-center text-neutral-content z-10">
                   <div class="max-w-md">
                     <h1 class="mb-5 text-5xl font-bold text-white">
-                      Hello there
+                      Exotic tastes at your doorstep
                     </h1>
                     <p class="mb-5">
-                      Provident cupiditate voluptatem et in. Quaerat fugiat ut
-                      assumenda excepturi exercitationem quasi. In deleniti
-                      eaque aut repudiandae et a id nisi.
+                      We supply highly quality organic products
                     </p>
-                    <button class="btn btn-primary">Get Started</button>
+                    <button class="btn btn-primary">Shop Now</button>
                   </div>
                 </div>
               </div>
@@ -154,13 +139,13 @@
                 ></div>
                 <div class="hero-content text-center text-neutral-content">
                   <div class="max-w-md">
-                    <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+                    <h1 class="mb-5 text-5xl font-bold">
+                      Exotic tastes at your doorstep
+                    </h1>
                     <p class="mb-5">
-                      Provident cupiditate voluptatem et in. Quaerat fugiat ut
-                      assumenda excepturi exercitationem quasi. In deleniti
-                      eaque aut repudiandae et a id nisi.
+                      We supply highly quality organic products
                     </p>
-                    <button class="btn btn-primary">Get Started</button>
+                    <button class="btn btn-primary">Shop Now</button>
                   </div>
                 </div>
               </div>
@@ -179,13 +164,13 @@
                 ></div>
                 <div class="hero-content text-center text-neutral-content">
                   <div class="max-w-md">
-                    <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+                    <h1 class="mb-5 text-5xl font-bold">
+                      Exotic tastes at your doorstep
+                    </h1>
                     <p class="mb-5">
-                      Provident cupiditate voluptatem et in. Quaerat fugiat ut
-                      assumenda excepturi exercitationem quasi. In deleniti
-                      eaque aut repudiandae et a id nisi.
+                      We supply highly quality organic products
                     </p>
-                    <button class="btn btn-primary">Get Started</button>
+                    <button class="btn btn-primary">Shop Now</button>
                   </div>
                 </div>
               </div>
@@ -204,13 +189,13 @@
                 ></div>
                 <div class="hero-content text-center text-neutral-content">
                   <div class="max-w-md">
-                    <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+                    <h1 class="mb-5 text-5xl font-bold">
+                      Exotic tastes at your doorstep
+                    </h1>
                     <p class="mb-5">
-                      Provident cupiditate voluptatem et in. Quaerat fugiat ut
-                      assumenda excepturi exercitationem quasi. In deleniti
-                      eaque aut repudiandae et a id nisi.
+                      We supply highly quality organic products
                     </p>
-                    <button class="btn btn-primary">Get Started</button>
+                    <button class="btn btn-primary">Shop Now</button>
                   </div>
                 </div>
               </div>
@@ -224,28 +209,28 @@
             </div>
           </div>
           <div
-            class="max-w-5xl p-4 bg-white hidden md:block absolute -bottom-24 left-20 right-20"
+            class="max-w-5xl p-4 bg-white hidden md:block absolute top-3/4 left-20 right-20"
           >
             <div class="flex gap-8 text-center">
               <div>
                 <img src="images/fruit1.png" alt="" />
-                <p class="my-2">Hello there</p>
+                <p class="my-2">Strawberry</p>
               </div>
               <div>
-                <img src="images/fruit1.png" alt="" />
-                <p class="my-2">Hello there</p>
+                <img src="images/fruit2.png" alt="" />
+                <p class="my-2">Orange</p>
               </div>
               <div>
-                <img src="images/fruit1.png" alt="" />
-                <p class="my-2">Hello there</p>
+                <img src="images/fruit3.png" alt="" />
+                <p class="my-2">Mango</p>
               </div>
               <div>
-                <img src="images/fruit1.png" alt="" />
-                <p class="my-2">Hello there</p>
+                <img src="images/fruit4.png" alt="" />
+                <p class="my-2">Strawberry</p>
               </div>
               <div>
-                <img src="images/fruit1.png" alt="" />
-                <p class="my-2">Hello there</p>
+                <img src="images/fruit5.png" alt="" />
+                <p class="my-2">Mango</p>
               </div>
             </div>
           </div>
@@ -255,11 +240,13 @@
     <main>
       <!-- Deal of the day -->
       <section>
-        <div class="mx-5 md:max-w-3xl md:mx-auto">
-          <div class="flex flex-col md:flex-row items-center">
-            <div class="text-center md:text-left">
+        <div class="mx-5 md:max-w-4xl lg:max-w-5xl md:mx-auto">
+          <div
+            class="flex flex-col md:flex-row items-center px-4 justify-around"
+          >
+            <div class="text-center md:text-left basis-1/2">
               <div>
-                <h1 class="text-5xl font-bold">Box Office News!</h1>
+                <h2 class="text-5xl font-bold">Deal of the day</h2>
                 <p class="py-6">
                   Contrary to popular belief, is not simply random text. It has
                   roots in a piece of classical Latin literature from 45 BC,
@@ -309,15 +296,15 @@
               </div>
             </div>
           </div>
-          <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-4">
+          <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3">
             <!-- card 1 -->
             <div class="card bg-base-100 shadow-xl">
               <figure class="px-10 pt-10">
-                <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
+                <img src="./images/fruit6.png" class="rounded-xl" />
               </figure>
               <div class="card-body items-center text-center">
-                <h2 class="card-title">Shoes!</h2>
-                <p>If a dog chews shoes whose shoes does he choose?</p>
+                <p class="card-title">12.90$ - 18.85$</p>
+                <h2>Apples</h2>
                 <!-- rating -->
                 <div class="rating">
                   <input
@@ -350,7 +337,7 @@
 
                 <!-- Open the modal using ID.showModal() method -->
                 <button class="btn" onclick="my_modal_1.showModal()">
-                  open modal
+                  Details
                 </button>
                 <dialog
                   id="my_modal_1"
@@ -372,11 +359,11 @@
             <!-- card 2 -->
             <div class="card bg-base-100 shadow-xl">
               <figure class="px-10 pt-10">
-                <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
+                <img src="./images/fruit7.png" class="rounded-xl" />
               </figure>
               <div class="card-body items-center text-center">
-                <h2 class="card-title">Shoes!</h2>
-                <p>If a dog chews shoes whose shoes does he choose?</p>
+                <h2 class="card-title">12.90$ - 18.85$</h2>
+                <p>Orange</p>
                 <!-- rating -->
                 <div class="rating">
                   <input
@@ -409,7 +396,7 @@
 
                 <!-- Open the modal using ID.showModal() method -->
                 <button class="btn" onclick="my_modal_2.showModal()">
-                  open modal
+                  Details
                 </button>
                 <dialog
                   id="my_modal_2"
@@ -431,11 +418,11 @@
             <!-- card 3 -->
             <div class="card bg-base-100 shadow-xl">
               <figure class="px-10 pt-10">
-                <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
+                <img src="./images/fruit8.png" alt="Shoes" class="rounded-xl" />
               </figure>
               <div class="card-body items-center text-center">
-                <h2 class="card-title">Shoes!</h2>
-                <p>If a dog chews shoes whose shoes does he choose?</p>
+                <h2 class="card-title">12.90$ - 18.85$</h2>
+                <p>Red Dragon</p>
                 <!-- rating -->
                 <div class="rating">
                   <input
@@ -468,7 +455,7 @@
 
                 <!-- Open the modal using ID.showModal() method -->
                 <button class="btn" onclick="my_modal_3.showModal()">
-                  open modal
+                  Details
                 </button>
                 <dialog
                   id="my_modal_3"
@@ -481,63 +468,6 @@
                     </p>
                     <div class="modal-action">
                       <!-- if there is a button in form, it will close the modal -->
-                      <button class="btn">Close</button>
-                    </div>
-                  </form>
-                </dialog>
-              </div>
-            </div>
-            <!-- card 4 -->
-            <div class="card bg-base-100 shadow-xl">
-              <figure class="px-10 pt-10">
-                <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
-              </figure>
-              <div class="card-body items-center text-center">
-                <h2 class="card-title">Shoes!</h2>
-                <p>If a dog chews shoes whose shoes does he choose?</p>
-                <!-- rating -->
-                <div class="rating">
-                  <input
-                    type="radio"
-                    name="rating-4"
-                    class="mask mask-star-2 bg-orange-400"
-                    checked
-                  />
-                  <input
-                    type="radio"
-                    name="rating-4"
-                    class="mask mask-star-2 bg-orange-400"
-                  />
-                  <input
-                    type="radio"
-                    name="rating-4"
-                    class="mask mask-star-2 bg-orange-400"
-                  />
-                  <input
-                    type="radio"
-                    name="rating-4"
-                    class="mask mask-star-2 bg-orange-400"
-                  />
-                  <input
-                    type="radio"
-                    name="rating-4"
-                    class="mask mask-star-2 bg-orange-400"
-                  />
-                </div>
-
-                <button class="btn" onclick="my_modal_4.showModal()">
-                  open modal
-                </button>
-                <dialog
-                  id="my_modal_4"
-                  class="modal modal-bottom sm:modal-middle"
-                >
-                  <form method="dialog" class="modal-box">
-                    <h3 class="font-bold text-lg">Hello!</h3>
-                    <p class="py-4">
-                      Press ESC key or click the button below to close
-                    </p>
-                    <div class="modal-action">
                       <button class="btn">Close</button>
                     </div>
                   </form>
