--- a/index.html
+++ b/index.html
@@ -827,12 +827,12 @@
         <p>Fruit Burst</p>
       </div>
       <div class="grid grid-flow-col gap-4">
-        <a class="link link-hover">About us</a>
-        <a class="link link-hover">Contact</a>
-        <a class="link link-hover">Jobs</a>
-        <a class="link link-hover">Press kit</a>
-        <a class="link link-hover">Press kit</a>
-        <a class="link link-hover">Press kit</a>
+        <a class="link link-hover">Home</a>
+        <a class="link link-hover">About Us</a>
+        <a class="link link-hover">Shop</a>
+        <a class="link link-hover">All Fruits</a>
+        <a class="link link-hover">Support</a>
+        <a class="link link-hover">My Account</a>
       </div>
       <div>
         <div class="grid grid-flow-col gap-4">
