--- a/index.html
+++ b/index.html
@@ -727,10 +727,10 @@
             </p>
           </div>
 
-          <div class="flex flex-col md:flex-row gap-4">
+          <div class="flex flex-col items-center lg:flex-row gap-4">
             <div class="flex flex-col items-center gap-2">
               <div
-                class="flex flex-col md:flex-row items-center gap-2 text-center md:text-left"
+                class="flex flex-col lg:flex-row items-center gap-2 text-center lg:text-left"
               >
                 <img class="max-w-full" src="./images/Group 46.png" alt="" />
                 <div>
@@ -743,7 +743,7 @@
                 </div>
               </div>
               <div
-                class="flex flex-col md:flex-row items-center gap-2 text-center md:text-left"
+                class="flex flex-col lg:flex-row items-center gap-2 text-center lg:text-left"
               >
                 <img class="max-w-full" src="./images/Group 47.png" alt="" />
                 <div>
@@ -756,7 +756,7 @@
                 </div>
               </div>
               <div
-                class="flex flex-col md:flex-row items-center gap-2 text-center md:text-left"
+                class="flex flex-col lg:flex-row items-center gap-2 text-center lg:text-left"
               >
                 <img class="max-w-full" src="./images/Group 48.png" alt="" />
                 <div>
@@ -769,7 +769,7 @@
                 </div>
               </div>
             </div>
-            <div class="-order-1 md:order-none">
+            <div class="-order-1 lg:order-none">
               <img
                 src="./images/whychoose1.png"
                 alt=""
@@ -778,7 +778,7 @@
             </div>
             <div class="flex flex-col items-center gap-2">
               <div
-                class="flex flex-col md:flex-row-reverse items-center gap-2 text-center md:text-right"
+                class="flex flex-col lg:flex-row-reverse items-center gap-2 text-center lg:text-right"
               >
                 <img class="max-w-full" src="./images/Group 49.png" alt="" />
                 <div>
@@ -791,7 +791,7 @@
                 </div>
               </div>
               <div
-                class="flex flex-col md:flex-row-reverse items-center gap-2 text-center md:text-right"
+                class="flex flex-col lg:flex-row-reverse items-center gap-2 text-center lg:text-right"
               >
                 <img class="max-w-full" src="./images/Group 50.png" alt="" />
                 <div>
@@ -804,7 +804,7 @@
                 </div>
               </div>
               <div
-                class="flex flex-col md:flex-row-reverse items-center gap-2 text-center md:text-right"
+                class="flex flex-col lg:flex-row-reverse items-center gap-2 text-center lg:text-right"
               >
                 <img class="max-w-full" src="./images/Group 51.png" alt="" />
                 <div>
@@ -821,6 +821,8 @@
         </div>
       </section>
     </main>
+
+    <!-- foot foot footer -->
     <footer class="footer footer-center p-10 bg-gray-900 text-white rounded">
       <div class="flex items-center">
         <img src="./images/logo.png" alt="" />
